Inclundo biblioteca de tradução e finalizando documentação swagger
