# api/swagger.js
@@ -5,16 +5,22 @@ import { fileURLToPath } from 'url';
 const __filename = fileURLToPath(import.meta.url);
 const __dirname = path.dirname(__filename);
 
+const outputFile = path.join(__dirname, '..', 'swagger-output.json');
+const endpointsFiles = [path.join(__dirname, 'app.js')];
+
 const doc = {
   info: {
     title: 'Translation API',
     description: 'API for translating text.',
   },
-  host: 'localhost:3000',
-  schemes: ['http'],
-  basePath: '/translations',
+  servers: [
+    {
+      url: 'http://127.0.0.1:4040',
+      description: 'Development server',
+    },
+  ],
   components: {
-    schemas: {
+    '@schemas': {
       CreateTranslationRequest: {
         type: 'object',
         properties: {
@@ -22,7 +28,7 @@ const doc = {
             type: 'string',
             example: 'Hello, world!',
           },
-          targetLanguage: {
+          to: {
             type: 'string',
             example: 'pt',
           },
@@ -32,22 +38,30 @@ const doc = {
       CreateTranslationResponse: {
         type: 'object',
         properties: {
-          message: {
-            type: 'string',
-            example: 'Request received and is being processed.',
-          },
           requestId: {
             type: 'string',
-            example: 'a1b2c3d4-e5f6-7890-1234-567890abcdef',
+            example: '4ed4809e-0c7d-4500-817d-a833c0fd1d13',
+          },
+          status: {
+            type: 'string',
+            example: 'queued',
           },
         },
       },
       GetTranslationStatusResponse: {
         type: 'object',
         properties: {
+          requestId: {
+            type: 'string',
+            example: '4ed4809e-0c7d-4500-817d-a833c0fd1d13',
+          },
           status: {
             type: 'string',
             example: 'completed',
+          },
+          createdAt: {
+            type: 'string',
+            example: '2025-06-17T23:31:59.806Z',
           },
           originalText: {
             type: 'string',
@@ -71,9 +85,6 @@ const doc = {
     },
   },
 };
-
-const outputFile = path.join(__dirname, '..', 'swagger-output.json');
-const endpointsFiles = [path.join(__dirname, 'routes', 'translationRouter.js')];
 
 swaggerAutogen({ openapi: '3.0.0' })(outputFile, endpointsFiles, doc).then(() => {
   console.log('Swagger documentation generated successfully.');
